<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/zombie_bg"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="8" >

        <TextView
            android:id="@+id/tituloApp"
            style="@style/TextoKillDead"
            android:layout_marginBottom="20dp"
            android:layout_weight="4"
            android:gravity="center|top"
            android:text="@string/tituloAplicacion" />

        <Button
            android:id="@+id/btnArrancar"
            style="@style/TextoKillDead.Botones"
            android:onClick="lanzarJuego"
            android:text="@string/arrancar"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnConfigurar"
            style="@style/TextoKillDead.Botones"
            android:onClick="lanzarPreferencias"
            android:text="@string/configurar" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnAcercaDe"
            style="@style/TextoKillDead.Botones"
            android:onClick="lanzarAcercaDe"
            android:text="@string/acercade"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnPuntuaciones"
            style="@style/TextoKillDead.Botones"
            android:onClick="lanzarPuntuaciones"
            android:text="@string/puntuaciones"
            android:layout_weight="1" />
    </LinearLayout>