<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Acerca de"
            android:id="@+id/textView"
            android:textColor="#e75723"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:background="#ffffff" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:orientation="horizontal"
        android:rowCount="2"
        android:background="#11aa99"
        android:animateLayoutChanges="@bool/abc_action_bar_embed_tabs">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#1025ff"
        android:text="@string/desarrollador"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_user"
            android:layout_gravity="center"
            />
    </GridLayout>
    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
<GridLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5pt"
    android:orientation="vertical"
    android:rowCount="2"
    android:background="#11aa99"
    android:animateLayoutChanges="@bool/abc_action_bar_embed_tabs">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#1025ff"
        android:text="@string/universidad_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/university_name"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#1025ff"
        android:text="@string/title_teacher"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:layout_gravity="center"
        />
</GridLayout>


    </LinearLayout>
