<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txv_button_team"
        android:id="@+id/textView"
        android:textColor="#e75723"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:background="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_team_two"
        android:textSize="15dp"
        android:autoLink="none"
        android:background="#dab2b2"
        android:autoText="false"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_button_split"
        android:textSize="15dp"
        android:autoLink="none"
        android:background="#dab2b2"
        android:autoText="false"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="20dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_team3_screen1"
        android:foregroundGravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_team_button_sec"
        android:textSize="15dp"
        android:autoLink="none"

        android:background="#dab2b2"
        android:foregroundGravity="center" />

    />

</LinearLayout>