<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txv_input_prime"
        android:id="@+id/textView"
        android:textColor="#e75723"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:background="#ffffff" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_input_autocomplete"
        android:textSize="15dp"
        android:autoLink="none"
        android:background="#dab2b2"
        android:autoText="false"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_input_textarea"
        android:textSize="15dp"
        android:autoLink="none"
        android:background="#dab2b2"
        android:autoText="false"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Input Dropdown: es un widget de avanzada para seleccionar un elemento de una colección."
        android:textSize="15dp"
        android:autoLink="none"
        android:background="#dab2b2"
        android:autoText="false"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_team_imput"
        android:textSize="15dp"
        android:autoLink="none"

        android:background="#dab2b2"
        android:autoText="false"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="20dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_team2_screenn1"
        android:foregroundGravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_tema_input_second"
        android:textSize="15dp"
        android:autoLink="none"

        android:background="#dab2b2"
        android:foregroundGravity="center"
        android:padding="20dp"/>

    />


</LinearLayout>
</ScrollView>